Deployment/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: graduation

spec:
  replicas: 2
  selector:
    matchLabels:
      app: iti-frontend
      
  template:
    metadata:
      labels:
        app: iti-frontend
    spec:
      containers:
        - name: graduation
          image: engboda/iti:latest
          ports:
            - containerPort: 8080
