Deployment/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: iti-backend
  template:
    metadata:
      labels:
        app: iti-backend
    spec:
      containers:
        - name: redis-backend-server
          image: redis
          ports: 
            - containerPort: 6379
