Deployment/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: App-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: iti-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
