Deployment/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: iti-frontend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  defaultBackend:
    service:
      name: iti-frontend
      port:
        number: 8000
  rules:
  - http:
      paths:
      - path: /jenkins
        pathType: ImplementationSpecific
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
      - path: /app
        pathType: ImplementationSpecific
        backend:
          service:
            name: iti-frontend
            port:
              number: 8000
